--- a/WebContent/crm/turnoverStat_view.html
+++ b/WebContent/crm/turnoverStat_view.html
@@ -1090,11 +1090,14 @@ Date.prototype.format=function(fmt) {
  							var storeName = element.name;
  							var storeid = element.storeno;
  							array.push(storeName);
- 							if(index == 0){
-	 							storeString = "{'"+storeName+"'"+":"+"'"+storeid+"'"+",";
-	 						}else if(index == jsonData.length-1){
-	 							storeString = storeString+"'"+storeName+"'"+":"+"'"+storeid+"'"+"}";
-	 						}else{
+                            if(index == 0 || index == jsonData.length-1){
+                                if(index == 0){
+                                    storeString = "{'"+storeName+"'"+":"+"'"+storeid+"'"+",";
+                                }
+                                if(index == jsonData.length-1){
+                                    storeString = storeString+"'"+storeName+"'"+":"+"'"+storeid+"'"+"}";
+                                }
+                            }else{
 	 							storeString = storeString+"'"+storeName+"'"+":"+"'"+storeid+"'"+",";
 	 						}
  						});
@@ -1131,11 +1134,14 @@ Date.prototype.format=function(fmt) {
  							var storeName = element.name;
  							var storeid = element.storeno;
  							array_area.push(storeName);
- 							if(index == 0){
-	 							storeString = "{'"+storeName+"'"+":"+"'"+storeid+"'"+",";
-	 						}else if(index == jsonData.length-1){
-	 							storeString = storeString+"'"+storeName+"'"+":"+"'"+storeid+"'"+"}";
-	 						}else{
+                            if(index == 0 || index == jsonData.length-1){
+                                if(index == 0){
+                                    storeString = "{'"+storeName+"'"+":"+"'"+storeid+"'"+",";
+                                }
+                                if(index == jsonData.length-1){
+                                    storeString = storeString+"'"+storeName+"'"+":"+"'"+storeid+"'"+"}";
+                                }
+                            }else{
 	 							storeString = storeString+"'"+storeName+"'"+":"+"'"+storeid+"'"+",";
 	 						}
  						});
@@ -1172,11 +1178,14 @@ Date.prototype.format=function(fmt) {
  							var storeName = element.name;
  							var storeid = element.storeno;
  							array_dept.push(storeName);
- 							if(index == 0){
-	 							storeString = "{'"+storeName+"'"+":"+"'"+storeid+"'"+",";
-	 						}else if(index == jsonData.length-1){
-	 							storeString = storeString+"'"+storeName+"'"+":"+"'"+storeid+"'"+"}";
-	 						}else{
+                            if(index == 0 || index == jsonData.length-1){
+                                if(index == 0){
+                                    storeString = "{'"+storeName+"'"+":"+"'"+storeid+"'"+",";
+                                }
+                                if(index == jsonData.length-1){
+                                    storeString = storeString+"'"+storeName+"'"+":"+"'"+storeid+"'"+"}";
+                                }
+                            }else{
 	 							storeString = storeString+"'"+storeName+"'"+":"+"'"+storeid+"'"+",";
 	 						}
  						});
@@ -1212,11 +1221,14 @@ Date.prototype.format=function(fmt) {
  							var storeName = element.name;
  							var storeid = element.storeno;
  							array_channel.push(storeName);
- 							if(index == 0){
-	 							storeString = "{'"+storeName+"'"+":"+"'"+storeid+"'"+",";
-	 						}else if(index == jsonData.length-1){
-	 							storeString = storeString+"'"+storeName+"'"+":"+"'"+storeid+"'"+"}";
-	 						}else{
+                            if(index == 0 || index == jsonData.length-1){
+                                if(index == 0){
+                                    storeString = "{'"+storeName+"'"+":"+"'"+storeid+"'"+",";
+                                }
+                                if(index == jsonData.length-1){
+                                    storeString = storeString+"'"+storeName+"'"+":"+"'"+storeid+"'"+"}";
+                                }
+                            }else{
 	 							storeString = storeString+"'"+storeName+"'"+":"+"'"+storeid+"'"+",";
 	 						}
  						});
@@ -1252,11 +1264,14 @@ Date.prototype.format=function(fmt) {
  							var storeName = element.name;
  							var storeid = element.storeno;
  							array_eshop.push(storeName);
- 							if(index == 0){
-	 							storeString = "{'"+storeName+"'"+":"+"'"+storeid+"'"+",";
-	 						}else if(index == jsonData.length-1){
-	 							storeString = storeString+"'"+storeName+"'"+":"+"'"+storeid+"'"+"}";
-	 						}else{
+                            if(index == 0 || index == jsonData.length-1){
+                                if(index == 0){
+                                    storeString = "{'"+storeName+"'"+":"+"'"+storeid+"'"+",";
+                                }
+                                if(index == jsonData.length-1){
+                                    storeString = storeString+"'"+storeName+"'"+":"+"'"+storeid+"'"+"}";
+                                }
+                            }else{
 	 							storeString = storeString+"'"+storeName+"'"+":"+"'"+storeid+"'"+",";
 	 						}
  						});
