--- a/WebContent/crm/memberData_list.html
+++ b/WebContent/crm/memberData_list.html
@@ -530,10 +530,13 @@
                             var storeName = element.name;
                             var storeid = element.id;
                             array.push(storeName);
-                            if(index == 0){
-                                storeString = "{'"+storeName+"'"+":"+"'"+storeid+"'"+",";
-                            }else if(index == jsonData.length-1){
-                                storeString = storeString+"'"+storeName+"'"+":"+"'"+storeid+"'"+"}";
+                            if(index == 0 || index == jsonData.length-1){
+                                if(index == 0){
+                                    storeString = "{'"+storeName+"'"+":"+"'"+storeid+"'"+",";
+                                }
+                                if(index == jsonData.length-1){
+                                    storeString = storeString+"'"+storeName+"'"+":"+"'"+storeid+"'"+"}";
+                                }
                             }else{
                                 storeString = storeString+"'"+storeName+"'"+":"+"'"+storeid+"'"+",";
                             }
