--- a/WebContent/crm/userOperationStat_view.html
+++ b/WebContent/crm/userOperationStat_view.html
@@ -1485,11 +1485,14 @@ Date.prototype.format=function(fmt) {
  							var storeName = element.name;
  							var storeid = element.storeno;
  							array.push(storeName);
- 							if(index == 0){
-	 							storeString = "{'"+storeName+"'"+":"+"'"+storeid+"'"+",";
-	 						}else if(index == jsonData.length-1){
-	 							storeString = storeString+"'"+storeName+"'"+":"+"'"+storeid+"'"+"}";
-	 						}else{
+                            if(index == 0 || index == jsonData.length-1){
+                                if(index == 0){
+                                    storeString = "{'"+storeName+"'"+":"+"'"+storeid+"'"+",";
+                                }
+                                if(index == jsonData.length-1){
+                                    storeString = storeString+"'"+storeName+"'"+":"+"'"+storeid+"'"+"}";
+                                }
+                            }else{
 	 							storeString = storeString+"'"+storeName+"'"+":"+"'"+storeid+"'"+",";
 	 						}
  						});
@@ -1525,11 +1528,14 @@ Date.prototype.format=function(fmt) {
  							var storeName = element.name;
  							var storeid = element.storeno;
  							array_pay.push(storeName);
- 							if(index == 0){
-	 							storeString = "{'"+storeName+"'"+":"+"'"+storeid+"'"+",";
-	 						}else if(index == jsonData.length-1){
-	 							storeString = storeString+"'"+storeName+"'"+":"+"'"+storeid+"'"+"}";
-	 						}else{
+                            if(index == 0 || index == jsonData.length-1){
+                                if(index == 0){
+                                    storeString = "{'"+storeName+"'"+":"+"'"+storeid+"'"+",";
+                                }
+                                if(index == jsonData.length-1){
+                                    storeString = storeString+"'"+storeName+"'"+":"+"'"+storeid+"'"+"}";
+                                }
+                            }else{
 	 							storeString = storeString+"'"+storeName+"'"+":"+"'"+storeid+"'"+",";
 	 						}
  						});
@@ -1565,11 +1571,14 @@ Date.prototype.format=function(fmt) {
  							var storeName = element.name;
  							var storeid = element.storeno;
  							array_more.push(storeName);
- 							if(index == 0){
-	 							storeString = "{'"+storeName+"'"+":"+"'"+storeid+"'"+",";
-	 						}else if(index == jsonData.length-1){
-	 							storeString = storeString+"'"+storeName+"'"+":"+"'"+storeid+"'"+"}";
-	 						}else{
+                            if(index == 0 || index == jsonData.length-1){
+                                if(index == 0){
+                                    storeString = "{'"+storeName+"'"+":"+"'"+storeid+"'"+",";
+                                }
+                                if(index == jsonData.length-1){
+                                    storeString = storeString+"'"+storeName+"'"+":"+"'"+storeid+"'"+"}";
+                                }
+                            }else{
 	 							storeString = storeString+"'"+storeName+"'"+":"+"'"+storeid+"'"+",";
 	 						}
  						});
@@ -1605,11 +1614,14 @@ Date.prototype.format=function(fmt) {
  							var storeName = element.name;
  							var storeid = element.storeno;
  							array_areamore.push(storeName);
- 							if(index == 0){
-	 							storeString = "{'"+storeName+"'"+":"+"'"+storeid+"'"+",";
-	 						}else if(index == jsonData.length-1){
-	 							storeString = storeString+"'"+storeName+"'"+":"+"'"+storeid+"'"+"}";
-	 						}else{
+                            if(index == 0 || index == jsonData.length-1){
+                                if(index == 0){
+                                    storeString = "{'"+storeName+"'"+":"+"'"+storeid+"'"+",";
+                                }
+                                if(index == jsonData.length-1){
+                                    storeString = storeString+"'"+storeName+"'"+":"+"'"+storeid+"'"+"}";
+                                }
+                            }else{
 	 							storeString = storeString+"'"+storeName+"'"+":"+"'"+storeid+"'"+",";
 	 						}
  						});
@@ -1645,11 +1657,14 @@ Date.prototype.format=function(fmt) {
  							var storeName = element.name;
  							var storeid = element.storeno;
  							array_daynewcus.push(storeName);
- 							if(index == 0){
-	 							storeString = "{'"+storeName+"'"+":"+"'"+storeid+"'"+",";
-	 						}else if(index == jsonData.length-1){
-	 							storeString = storeString+"'"+storeName+"'"+":"+"'"+storeid+"'"+"}";
-	 						}else{
+                            if(index == 0 || index == jsonData.length-1){
+                                if(index == 0){
+                                    storeString = "{'"+storeName+"'"+":"+"'"+storeid+"'"+",";
+                                }
+                                if(index == jsonData.length-1){
+                                    storeString = storeString+"'"+storeName+"'"+":"+"'"+storeid+"'"+"}";
+                                }
+                            }else{
 	 							storeString = storeString+"'"+storeName+"'"+":"+"'"+storeid+"'"+",";
 	 						}
  						});
@@ -1685,11 +1700,14 @@ Date.prototype.format=function(fmt) {
  							var storeName = element.name;
  							var storeid = element.storeno;
  							array_daypay.push(storeName);
- 							if(index == 0){
-	 							storeString = "{'"+storeName+"'"+":"+"'"+storeid+"'"+",";
-	 						}else if(index == jsonData.length-1){
-	 							storeString = storeString+"'"+storeName+"'"+":"+"'"+storeid+"'"+"}";
-	 						}else{
+                            if(index == 0 || index == jsonData.length-1){
+                                if(index == 0){
+                                    storeString = "{'"+storeName+"'"+":"+"'"+storeid+"'"+",";
+                                }
+                                if(index == jsonData.length-1){
+                                    storeString = storeString+"'"+storeName+"'"+":"+"'"+storeid+"'"+"}";
+                                }
+                            }else{
 	 							storeString = storeString+"'"+storeName+"'"+":"+"'"+storeid+"'"+",";
 	 						}
  						});
@@ -1725,11 +1743,14 @@ Date.prototype.format=function(fmt) {
   							var storeName = element.name;
   							var storeid = element.storeno;
   							array_daymore.push(storeName);
-  							if(index == 0){
- 	 							storeString = "{'"+storeName+"'"+":"+"'"+storeid+"'"+",";
- 	 						}else if(index == jsonData.length-1){
- 	 							storeString = storeString+"'"+storeName+"'"+":"+"'"+storeid+"'"+"}";
- 	 						}else{
+                            if(index == 0 || index == jsonData.length-1){
+                                if(index == 0){
+                                    storeString = "{'"+storeName+"'"+":"+"'"+storeid+"'"+",";
+                                }
+                                if(index == jsonData.length-1){
+                                    storeString = storeString+"'"+storeName+"'"+":"+"'"+storeid+"'"+"}";
+                                }
+                            }else{
  	 							storeString = storeString+"'"+storeName+"'"+":"+"'"+storeid+"'"+",";
  	 						}
   						});
@@ -1765,11 +1786,14 @@ Date.prototype.format=function(fmt) {
  							var storeName = element.name;
  							var storeid = element.storeno;
  							array_effect.push(storeName);
- 							if(index == 0){
-	 							storeString = "{'"+storeName+"'"+":"+"'"+storeid+"'"+",";
-	 						}else if(index == jsonData.length-1){
-	 							storeString = storeString+"'"+storeName+"'"+":"+"'"+storeid+"'"+"}";
-	 						}else{
+                            if(index == 0 || index == jsonData.length-1){
+                                if(index == 0){
+                                    storeString = "{'"+storeName+"'"+":"+"'"+storeid+"'"+",";
+                                }
+                                if(index == jsonData.length-1){
+                                    storeString = storeString+"'"+storeName+"'"+":"+"'"+storeid+"'"+"}";
+                                }
+                            }else{
 	 							storeString = storeString+"'"+storeName+"'"+":"+"'"+storeid+"'"+",";
 	 						}
  						});
