暂时屏蔽数据直播间链接

--- a/WebContent/crm/index_headquarters.html
+++ b/WebContent/crm/index_headquarters.html
@@ -212,9 +212,9 @@
                                 </div>
                             </div>
                         </li>
-                        <li>
-                            <em><a href="javascript:gotolive()" style="color:#fff">数据直播间</a></em>
-                        </li>
+                        <!--<li>-->
+                            <!--<em><a href="javascript:gotolive()" style="color:#fff">数据直播间</a></em>-->
+                        <!--</li>-->
                     </ul>
                 </div>
                 </div>
