--- a/WebContent/cost_statistics/each_project_cost.html
+++ b/WebContent/cost_statistics/each_project_cost.html
@@ -25,6 +25,7 @@
     <script src="js/cost_labor.js" type = "text/javascript"></script>
     <script src="js/cost_rent.js" type = "text/javascript"></script>
     <script src="js/cost_renovation.js" type = "text/javascript"></script>
+    <script src="js/cost_fixedAsset.js" type = "text/javascript"></script>
     <script type="text/javascript">
 
         var observe_question_number = 0;
@@ -85,6 +86,8 @@
             }else if(t==3){
 
                 getCostRenovation();//装修摊销
+            }else if(t==4){
+
             }
     }
 
@@ -178,8 +181,10 @@
                 <li class="active"><a href="#tab_1" data-toggle="tab" onclick="showCostTag(1)">人工成本</a></li>
                 <li><a href="#tab_2" data-toggle="tab" onclick="showCostTag(2)">租金成本</a></li>
                 <li><a href="#tab_3" data-toggle="tab" onclick="showCostTag(3)">装修摊销</a></li>
+                <li><a href="#tab_4" data-toggle="tab" onclick="showCostTag(4)">固定资产</a></li>
             </ul>
             <div class="tab-content no-padding">
+                <!-- 人工成本-->
                 <div class="tab-pane active" id="tab_1">
 
                         <table width="50%">
@@ -291,7 +296,7 @@
                         </div>
 
                 </div>
-                <!-- /.tab-pane -->
+                <!-- 租金成本 -->
                 <div class="tab-pane" id="tab_2">
                     <table width="50%">
                         <tr>
@@ -370,7 +375,7 @@
                         </table>
                     </div>
                 </div>
-                <!-- /.tab-pane -->
+                <!-- 装修摊销 -->
                 <div class="tab-pane" id="tab_3">
 
                         <table width="50%">
@@ -441,6 +446,81 @@
                                 <th style="text-align: center"><p>11月</p></th>
                                 <th style="text-align: center"><p>12月</p></th>
                                 <th style="text-align: center"><p style="width: auto">合同签订日期</p></th>
+                            </tr>
+                        </table>
+                    </div>
+                </div>
+                <!-- 固定资产 -->
+                <div class="tab-pane" id="tab_4">
+
+                    <table width="50%">
+                        <tr>
+                            <td width="10%">
+                                <p>门店编码：</p>
+                                <p><input type="text" id="storeNo_FixedAsset" name="storeNo_FixedAsset"></p>
+                            </td>
+                            <td width="10%">
+                                <p>门店名称：</p>
+                                <p><input type="text" name="" id="storeName_FixedAsset"/></p>
+                            </td>
+
+                            <td width="10%" style="text-align: center">
+                                <button  class="btn btn-primary" style="margin-bottom:-20px" onclick="getCostFixedAsset()">查询</button>
+                            </td>
+                            <td width="10%" style="text-align: center">
+                                <button  class="btn btn-primary" style="margin-bottom:-20px" onclick="saveCostFixedAsset()">保存</button>
+                            </td>
+                            <td width="10%" style="text-align:center">
+                                <button  class="btn btn-primary" style="margin-bottom:-20px" onclick="exportCostFixedAsset()">导出</button>
+                            </td>
+                        </tr>
+                    </table>
+                    <div class="col-sm-4 no-padding">
+                        <table class="table" cellspacing="0" cellpadding="0" id="FixedAsset_tb_1">
+                            <tr id="FixedAsset_tr_1">
+                                <th style="text-align: center;background-color:#A9A9A9">序号</th>
+                                <th style="text-align: center;background-color: #A9A9A9">门店编码</th>
+                                <th style="text-align: center;background-color: #A9A9A9">门店名称</th>
+
+                            </tr>
+
+
+                        </table>
+                    </div>
+                    <div class="col-sm-8 no-padding" style="overflow-x: scroll;margin-left:-1px">
+                        <table class="table table_x" cellspacing="0" cellpadding="0" id="FixedAsset_tb_2">
+
+                            <tr id="FixedAsset_tr_2">
+                                <th style="text-align: center"><p style="width: auto" >月摊销成本（元/月）</p></th>
+                                <th style="text-align: center"><p style="width: auto" >固定资产合计（元）</p></th>
+                                <th style="text-align: center"><p style="width: auto" >多功能一体机</p></th>
+                                <th style="text-align: center"><p>手机</p></th>
+                                <th style="text-align: center"><p>IPADmini</p></th>
+                                <th style="text-align: center"><p>收银设备</p></th>
+                                <th style="text-align: center"><p>电脑</p></th>
+                                <th style="text-align: center"><p>扫描枪、热敏打印机</p></th>
+                                <th style="text-align: center"><p>电子类合计</p></th>
+                                <th style="text-align: center"><p>摊销金额（36个月）</p></th>
+                                <th style="text-align: center"><p>电动车</p></th>
+                                <th style="text-align: center"><p>摊销金额（48个月）</p></th>
+                                <th style="text-align: center"><p>卖场冷链设备</p></th>
+                                <th style="text-align: center"><p>保险柜</p></th>
+                                <th style="text-align: center"><p>微仓货架</p></th>
+                                <th style="text-align: center"><p>卖场货架</p></th>
+                                <th style="text-align: center"><p>机器设备合计</p></th>
+                                <th style="text-align: center"><p>摊销金额（120个月）</p></th>
+                                <th style="text-align: center"><p>1月</p></th>
+                                <th style="text-align: center"><p>2月</p></th>
+                                <th style="text-align: center"><p>3月</p></th>
+                                <th style="text-align: center"><p>4月</p></th>
+                                <th style="text-align: center"><p>5月</p></th>
+                                <th style="text-align: center"><p>6月</p></th>
+                                <th style="text-align: center"><p>7月</p></th>
+                                <th style="text-align: center"><p>8月</p></th>
+                                <th style="text-align: center"><p>9月</p></th>
+                                <th style="text-align: center"><p>10月</p></th>
+                                <th style="text-align: center"><p>11月</p></th>
+                                <th style="text-align: center"><p>12月</p></th>
                             </tr>
                         </table>
                     </div>
