--- a/WebContent/data_access/observeManagementApp.html
+++ b/WebContent/data_access/observeManagementApp.html
@@ -6,6 +6,9 @@
 		<title>Untitled Document</title>
 		<link rel="stylesheet" type="text/css" href="css/i2/style_sheet_core.css"/>
 		<script type="text/javascript" src="../bizbase/js/lib.js" />
+		<style type="text/css">
+			/*html,body{min-height:100%; height:100%;}*/
+		</style>
 	</head>
 	<body>
 	</body>
