--- a/WebContent/data_access/observeModify.html
+++ b/WebContent/data_access/observeModify.html
@@ -9,12 +9,18 @@
         <link href="../startbootstrap/bower_components/metisMenu/dist/metisMenu.min.css" rel="stylesheet">
         <link href="../startbootstrap/dist/css/sb-admin-2.css" rel="stylesheet">
         <link href="../startbootstrap/bower_components/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
-        <script src="js/lib.js" type="text/javascript">
-        </script>
-        <script src="js/refDialog.js" type="text/javascript">
-        </script>
-        <script src="js/orgModify.js" type="text/javascript">
-        </script>
+        <link rel="stylesheet" href="colpick/css/normalize.css" type="text/css" />
+        <link rel="stylesheet" href="colpick/css/style.css" type="text/css" />
+        <link rel="stylesheet" href="colpick/css/colpick.css" type="text/css" />
+        <script src="js/lib_color.js" type="text/javascript"></script>
+        <script src="colpick/js/colpick.js"></script>
+        <script src="js/refDialog.js" type="text/javascript"></script>
+        <script src="js/orgModify.js" type="text/javascript"></script>
+
+
+
+
+
         <script type="text/javascript">
             //用于下级默认继承上级的组织机构所属
             var bidflag = false;
@@ -32,17 +38,38 @@
                 }
                 return theRequest;
             }
-            
+
             var request = getRequestParams();
             var id = request['id'];
             var model_id = request['model_id'];
             var parentName = '';
             $(function(){
+                $('#picker3').css('border-color', '#ff8800');
+                $('#picker3').colpick({
+                    layout:'rgbhex',
+                    colorScheme:'dark',
+                    color:'ff8800',
+                    submit:1,
+                    onChange:function(hsb,hex,rgb,el,bySetColor) {
+                        $(el).css('border-color','#'+hex);
+                        // Fill the text box just if the color was set using the picker, and not the colpickSetColor function.
+                        if(!bySetColor) $(el).val('#'+hex);
+                    },
+                    onSubmit:function(hsb,hex,rgb,el) {
+
+                        $(el).css('border-color', '#'+hex);
+
+                        $(el).colpickHide();
+
+                    }
+                }).keyup(function(){
+                    $(this).colpickSetColor(this.value);
+                });
                 console.log(id+model_id);
                 if(model_id == 'undefined' || model_id == null){//明查模块添加及编辑
                     $("#model").show();
                     if (id == "undefined" || id == null) {//添加
-
+                        $('#picker3').val('#ff8800');
                     }else{//编辑
                         var url = $$.PMSDispatchActionUrl;
                         var data = new PMSRequestObject("observeModelManager", "getModelById", [id]);
@@ -53,6 +80,11 @@
                             $("#model_name1").attr("readonly",true);
                             var order_no = func.order_no;
                             var remark = func.remark;
+                            var model_color = func.model_color;
+                            $('#picker3').val(model_color);
+                            $('#picker3').css('border-color',model_color);
+                            $('#picker3').colpickSetColor(model_color.replace("#",""));
+                            $("#id1").val(func.id);
                             $("#orderNum").val(order_no);
                             $("#remark_model").val(remark);
 
@@ -72,6 +104,7 @@
                             var func = $.fromJSON(datas.data);
                             var model_name = func.model_name;
                             $("#model_name").val(model_name);
+                            $("#model_id").val(model_id);
                         });
                     }else{//当id不是空时证明是编辑
                         var url = $$.PMSDispatchActionUrl;
@@ -83,6 +116,8 @@
                             var order_no = func.order_no;
                             var remark = func.remark;
                             $("#model_name").val(model_name);
+                            $("#model_id").val(func.model_id);
+                            $("#id").val(func.id);
                             $("#observe_content").val(observe_content);
                             $("#remark").val(remark);
                             $("#orderNo").val(order_no);
@@ -98,31 +133,30 @@
 
             
             function save1(){
-                var $validator = new PMSValidator($("#observeModify")[0], {
+                /*var $validator = new PMSValidator($("#observeModify")[0], {
                     bNormalDisplay: false,
                     iDisplayLength: 999
                 });
                 var flag = $validator.clientValidate();
                 if (!flag) {
                     return false;
-                }
+                }*/
                 if(model_id == 'undefined' || model_id == null){//明查模块添加及编辑
                     var orgUnit = {
                         id:$("#id1").val(),
                         status:getRadioVal("radioF1"),
                         remark:$("#remark_model").val(),
                         model_name:$("#model_name1").val(),
-                        order_no:$("#orderNo1").val()
+                        order_no:$("#orderNum").val(),
+                        model_color:$('#picker3').val()
                     };
                     doManager("ObserveModelManager", "saveorupdateobserveModel", orgUnit, function(data, textStatus, XMLHttpRequest){
                         if (data.result) {
                             var orgData = $.fromJSON(data.data);
-                            $$.showMessage("${system.info}", "修改功能成功!");
-                            window.setTimeout(function() {
-                                window.parent.appFrame.location = "functionModify.html?id=" + orgData.id;
-                            }, "1000");p''';/'
+                            //$$.showMessage("${system.info}", "修改功能成功!");
+                            window.location = "observeManagement.html";// + orgData.id;
                         }else{
-                            $$.showMessage("${system.info}", data.message);
+                            ///$$.showMessage("${system.info}", data.message);
                             return false;
                         }
                     }, true, {
@@ -132,7 +166,7 @@
                     var orgUnit = {
                         id:$("#id").val(),
                         status:getRadioVal("radioF"),
-                        remark:$("#remark_model").val(),
+                        remark:$("#remark").val(),
                         model_id:$("#model_id").val(),
                         observe_content:$("#observe_content").val(),
                         order_no:$("#orderNo").val()
@@ -140,12 +174,10 @@
                     doManager("CheckDetailsManager", "saveOrUpdateCheckDetails", orgUnit, function(data, textStatus, XMLHttpRequest){
                         if (data.result) {
                             var orgData = $.fromJSON(data.data);
-                            $$.showMessage("${system.info}", "修改功能成功!");
-                            window.setTimeout(function() {
-                                window.parent.appFrame.location = "functionModify.html?id=" + orgData.id;
-                            }, "1000");
+                            //$$.showMessage("${system.info}", "修改功能成功!");
+                            window.location = "observeManagement.html?id=" + $("#model_id").val();
                         }else{
-                            $$.showMessage("${system.info}", data.message);
+                            //$$.showMessage("${system.info}", data.message);
                             return false;
                         }
                     }, true, {
@@ -159,12 +191,12 @@
                 doManager("functionManager", "modify", orgUnit, function(data, textStatus, XMLHttpRequest){
                     if (data.result) {
                         var orgData = $.fromJSON(data.data);
-							$$.showMessage("${system.info}", "修改功能成功!");
+							//$$.showMessage("${system.info}", "修改功能成功!");
 							window.setTimeout(function() {
 								window.parent.appFrame.location = "functionModify.html?id=" + orgData.id;
 							}, "1000");
                     }else{
-						$$.showMessage("${system.info}", data.message);
+						//$$.showMessage("${system.info}", data.message);
 						return false;
 					}
                 }, true, {
@@ -186,6 +218,7 @@
                 padding-top: 5px;
             }
             table td{line-height: 30px;word-wrap:break-word;white-space:normal;}
+            html,body{min-height:100%; height:100%;}
         </style>
     </head>
     <body>
@@ -296,6 +329,17 @@
                                 </td>
                                 <td width="40%">
                                     <input type="text" id="remark_model" name="remark" class="form-control" style="width: 50%" />
+                                </td>
+                            </tr>
+                            <tr>
+                                <td align="center" nowrap="true">颜色：</td>
+                                <td width="40%">
+                                    <!--<div>-->
+
+                                        <input type="text" class="form-control" id="picker3">
+
+                                   <!-- </div>-->
+                                   <!-- <div class="clear"></div>-->
                                 </td>
                             </tr>
                             <tr>
