修改安心合作社跳转链接

--- a/WebContent/crm/index_headquarters.html
+++ b/WebContent/crm/index_headquarters.html
@@ -144,7 +144,7 @@
                                 <div class="secNav-box">
                                 	<dl class="col-sm-3">
                                         <dt><i></i>产品模型</dt>
-                                        <dd id="member_analysis"><a href="javascript:toToMemberAnalysis()"><span class="fa fa-puzzle-piece"></span>安心合作社</a>
+                                        <dd id="member_analysis"><a href="javascript:goToMemberAnalysis()"><span class="fa fa-puzzle-piece"></span>安心合作社</a>
                                         </dd>
                                         <dd id="youyi_info"><a href="javascript:goToYouyiInfo()"><span class="fa fa-puzzle-piece"></span>国安优易</a>
                                         </dd>
