增加样式,使总部首页当日营业额样式适应分辨率大于等于1600和小于1600

--- a/WebContent/crm/index_headquarters.html
+++ b/WebContent/crm/index_headquarters.html
@@ -295,7 +295,7 @@
         </div>
 		
               <!--实时数据-->
-      <div class="text-muted"  style="width: 48%; float:left; position: relative; margin: 0 1%; left: 25%;">
+      <div class="text-muted text-muted2"  style="width: 48%; float:left; position: relative; margin: 0 1%; left: 25%;">
         <div class="gaugetb1 clearfix text-center">
           <div class="col-sm-4">
           	<input type="hidden" id="tradesumofcurmonthHid">
